2007-06-04 Peter Brett <peter@peter-b.co.uk>

	* src/g_funcs.c, src/g_hook.c, src/g_keys.c, src/g_rc.c: Replace
	deprecated Guile functions & macros.

	Replace deprecated SCM_STRINGP, SCM_INUM, SCM_INUMP & SCM_MAKINUM
	with recommended equivalents for Guile 1.8.

2007-06-02 Peter Brett <peter@peter-b.co.uk>

	* configure.ac: Improve Guile configure checks.

	Makes configure scripts check for actual Guile version.

2007-06-01 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/i_callbacks.c: Fixed a behavior where you would cancel
	(via right mouse button or escape) the placing of components,
	but gschem would still be in the add component mode (and clicks
	would still place components).	Calling i_callback_cancel really
	means cancel the current mode and go into select mode.	This fix
	shouldn't break anything and still keeps all nice behaviors like
	pressing "ok" (on the component select dialog box), "apply",
	right mouse button cancel or escape cancel.

	* include/x_states.h: While debugging above, found out it was
	hard to map numeric state number to the symbolic name by looking
	at x_states.h.  Added comments to make this mapping more obvious.

2007-05-31 Peter Brett <peter@peter-b.co.uk>

	* include/prototype.h, src/i_basic.c, src/i_callbacks.c,
	  src/o_picture.c: Cleanup code for status bar messages.

	  Applied patch from Ivan Stankovic cleaning up code used for
	  displaying status bar messages.

2007-05-29 Peter Clifton <pcjc2@cam.ac.uk>

	* include/Makefile.am, include/gschem_dialog.h, include/x_compselect.h
	  include/x_log.h, include/x_multiattrib.h, include/x_pagesel.h
	  include/x_print.h, src/Makefile.am, src/gschem_dialog.c,
	  src/x_attribedit.c src/x_autonumber.c, src/x_compselect.c,
	  src/x_dialog.c, src/x_log.c, src/x_multiattrib.c, src/x_pagesel.c,
	  src/x_print.c: Applied patch by Ivan Stankovic making dialogs
	  within gschem save their position and size on exit and restore on
	  opening. Geometry is saved to {$HOME}/.gEDA/gschem-dialog-geometry
