@@ -711,14 +711,6 @@ compselect_init (Compselect *compselect)
                 "homogeneous", FALSE,
                 NULL);
 
-#if GTK_CHECK_VERSION (2,6,0)
-  /* Set the alternative button order (ok, cancel, help) for other systems */
-  gtk_dialog_set_alternative_button_order(GTK_DIALOG(compselect),
-					  GTK_RESPONSE_OK,
-					  GTK_RESPONSE_APPLY,
-					  GTK_RESPONSE_CLOSE,
-					  -1);
-#endif
   /* connect dialog to key press event */
   g_signal_connect (compselect,
                     "key_press_event",
@@ -928,6 +920,14 @@ compselect_init (Compselect *compselect)
 			  GTK_STOCK_OK, GTK_RESPONSE_OK,
                           NULL);
 
+#if GTK_CHECK_VERSION (2,6,0)
+  /* Set the alternative button order (ok, cancel, help) for other systems */
+  gtk_dialog_set_alternative_button_order(GTK_DIALOG(compselect),
+					  GTK_RESPONSE_OK,
+					  GTK_RESPONSE_APPLY,
+					  GTK_RESPONSE_CLOSE,
+					  -1);
+#endif
   /* Initialize the hidden property */
   compselect->hidden = FALSE;
 }
